Fix LikesController, method GET all
